--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -33,7 +34,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "vue/no-unused-components":"off"
+      "vue/no-unused-components": "off"
     }
   },
   "browserslist": [
